--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -875,11 +875,13 @@ section {
 # Counts
 --------------------------------------------------------------*/
 .counts {
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   background: #f5f5ff;
   padding: 70px 0 60px;
 }
 
 .counts .count-box {
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   padding: 30px 30px 25px 30px;
   width: 100%;
   position: relative;
@@ -906,7 +908,8 @@ section {
 }
 
 .counts .count-box span {
-  font-size: 36px;
+  font-family: Impact;
+  font-size: 30px;
   display: block;
   font-weight: 600;
   color: #010483;
